--- a/en.html
+++ b/en.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MYHUB</title>
     <style>[x-cloak]{display:none}</style>
-    <script src="https://unpkg.com/alpinejs" defer></script>
+    <script src="/cdn.min.js" defer></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body><div class="flex flex-col">
