--- a/en.html
+++ b/en.html
@@ -328,7 +328,7 @@
                 </li>
                 <li class="box-border relative py-1 pl-0 text-left text-gray-500 border-solid flex items-center">
                     <img class="mr-10 w-6 my-2" src="/images/whatsapp.svg" alt="WhatsApp" />
-                    <a href="https://web.whatsapp.com/send/?phone=77470276393" rel="nofollow" target="_blank" 
+                    <a href="https://wa.me/77470276393" rel="nofollow" target="_blank" 
                     class="text-gray-600 hover:text-blue-900">+77470276393</a>
                 </li>
             </ul>
